--- a/HelloWorld/manifest.json
+++ b/HelloWorld/manifest.json
@@ -1,6 +1,6 @@
 {
   "format" : 1,
-  "identifier" : "com.yourcompany.HelloWorld",
+  "identifier" : "org.marinacci.joshua.HelloWorld",
   "version" : 1,
   "name" : "Hello World!"
 }
