--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Base repository for development of a bubble for Cola Messenger",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "node deploy.js",
+    "debug":"node debug.js"
   },
   "author": "Cola, Inc.",
   "license": "Apache-2.0",
